.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.

Next Version

7.1.0  2017-09-06

API Changes:

  * util-events: Module has been removed. ``PHAB_ID=D82346``

  * util-lint: Add GlobalRules#withRules for testing. Allow for the ability to 
    specify a global rules set for use in testing. ``PHAB_ID=D83506``

7.0.0  2017-08-15

New Features:

  * util-core: Added `c.t.util.SlowProbeProxyTimer` for monitoring the duration
    of execution for timer tasks. ``PHAB_ID=D70279``

  * util-core: Introduced RootMonitor#set to set custom Monitor to RootMonitor.
    ``PHAB_ID=D70876``

  * util-jvm: `JvmStats` has been moved here from TwitterServer allowing broader
    access to many metrics including GC, allocations, memory, and more.
    ``PHAB_ID=D80883``

  * util-stats: Introducing Verbosity Levels for StatsReceivers (see docs on `StatsReceiver`
    for more info). ``PHAB_ID=D70112``

  * util-tunable: `c.t.u.tunable.Tunable`, `c.t.u.tunable.TunableMap`,
    `c.t.u.tunable.JsonTunableMapper`, and `c.t.u.tunable.ServiceLoadedTunableMap` are now public.
    This allows users to create and use Tunables, a mechanism for accessing dynamically
    configured values. See https://twitter.github.io/finagle/guide/Configuration.html#tunables 
    for details on how these can be used in Finagle. ``PHAB_ID=D80751``.

Bug Fixes:

  * util-core: Fix some consistency issues with `c.t.util.ByteReaderImpl`. Advance its
    cursor by the number of bytes consumed via `readBytes(Int)`, not the number specified
    as a method argument. `readString` will now throw an UnderflowException if the number
    of bytes specified exceeds the remaining buffer length instead of silently making due
    with the rest of the buffer's contents. ``PHAB_ID=D78301``

Runtime Behavior Changes:
