@@ -1,0 +1,24 @@
+-----BEGIN CERTIFICATE-----
+MIIEADCCAuigAwIBAgIJANZjlnZ7KIloMA0GCSqGSIb3DQEBBQUAMF0xCzAJBgNV
+BAYTAlVTMRMwEQYDVQQIEwpDYWxpZm9ybmlhMRYwFAYDVQQHEw1TYW4gRnJhbmNp
+c2NvMSEwHwYDVQQKExhJbnRlcm5ldCBXaWRnaXRzIFB0eSBMdGQwHhcNMTYwOTA3
+MjM1NTMxWhcNMTYwOTA4MjM1NTMxWjBdMQswCQYDVQQGEwJVUzETMBEGA1UECBMK
+Q2FsaWZvcm5pYTEWMBQGA1UEBxMNU2FuIEZyYW5jaXNjbzEhMB8GA1UEChMYSW50
+ZXJuZXQgV2lkZ2l0cyBQdHkgTHRkMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIB
+CgKCAQEA2rwt/vvuxKfKi1g+KNAmX3aB6eY5UyqoTQbfPXodxivpVFAcnJvhHUBw
+avh/m19pur/bnezhxYeXO6b9lQ4QhMUVPSXumUkr/IKmYtXVleYTj1djzvyS51YB
+N2KfQZdX1iJGIAIE146g5ExnJNJNCYGO4XrJgyB5ZMpUxrsr8bsElaeP8aAKzK3E
+U7/Aa33t0kEMmiigS0/l/0Wp3QD07GeC0/TieSR4W9XjKcGTl1rK/+jsQfD7Oguf
+mvW2YCFtCC979OOS47INgJ8tA9Izh/awfKpdHUDhwV43nC9Nbrz9zen25e8HGszO
+7etkIhiZaJbnfOa22yqXWSNpIgQ8jwIDAQABo4HCMIG/MB0GA1UdDgQWBBQDKGCS
+27QS29I9/5bkwoq/Y3IBDzCBjwYDVR0jBIGHMIGEgBQDKGCS27QS29I9/5bkwoq/
+Y3IBD6FhpF8wXTELMAkGA1UEBhMCVVMxEzARBgNVBAgTCkNhbGlmb3JuaWExFjAU
+BgNVBAcTDVNhbiBGcmFuY2lzY28xITAfBgNVBAoTGEludGVybmV0IFdpZGdpdHMg
+UHR5IEx0ZIIJANZjlnZ7KIloMAwGA1UdEwQFMAMBAf8wDQYJKoZIhvcNAQEFBQAD
+ggEBAIQYj/RpWpGfmV1NsXWlcWqf+sEeCujWmkrZxkwbKWEHKGMtu17O6F8pXr0S
+C8U/uprRVkgFetQT2T/YCPOs6jm/0XdXju5AyRJO5qizbeeaWtwbLnKdcjLIRa9Z
+Cq/qBsxhBPOd1HGmbRTG/s4One3NyGrVFHiXsEFkDxGP4rhPIauVd8wrja538Fq7
+ROsmcml8bysgl07QOZ3fRoZYNmZwhM+jSAAPhzeXb84YGl2ndVecOw0ydMZCbPzF
+vBWXRKx/9lIB2uiRZeuh1U1/CLVRBQlwJz2xjClJ+fgppdoPXoJKyhjarTtFi1uI
+0uB+s4PpYkG2XnGFOesO8P73g/w=
+-----END CERTIFICATE-----
