@@ -1,0 +1,24 @@
+-----BEGIN CERTIFICATE-----
+MIIEADCCAuigAwIBAgIJAJqIevVBguhYMA0GCSqGSIb3DQEBBQUAMF0xCzAJBgNV
+BAYTAlVTMRMwEQYDVQQIEwpDYWxpZm9ybmlhMRYwFAYDVQQHEw1TYW4gRnJhbmNp
+c2NvMSEwHwYDVQQKExhJbnRlcm5ldCBXaWRnaXRzIFB0eSBMdGQwHhcNMjcwOTA3
+MjM1NDMyWhcNMjcwOTA4MjM1NDMyWjBdMQswCQYDVQQGEwJVUzETMBEGA1UECBMK
+Q2FsaWZvcm5pYTEWMBQGA1UEBxMNU2FuIEZyYW5jaXNjbzEhMB8GA1UEChMYSW50
+ZXJuZXQgV2lkZ2l0cyBQdHkgTHRkMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIB
+CgKCAQEAnkgSIE9p6a5c02SvY1qKNNs8LY6F4JdGYsgot6bbIHHny/O+q0w15HDh
+fVhzCTi2En/1AZTMeS1QWx5YSdMvRnlGCu8+USjAaA2zr+9PVDyM3Ge+ojfZ6QcR
+D6YVmKQOmnEm3k/tnC6HHIAf3QMmCcVvnbMnuM3KnHe69Btlc8nrKWsUQEOed3Mz
+W+tXS5zNs0XwGe11RWgcTvuNCu/+m33VV11sE4P8sjVcldWUC2s+wLCn0LaseIWA
+Swht5hVcrd2zr88+bD3fNTQY0SuEO2DyO+Mo57kCSR77jFHkE88XL1XlChDtDY30
+hzSavVWXpD4cUc9egzRbfdlHp59/NwIDAQABo4HCMIG/MB0GA1UdDgQWBBRcVO9D
+EZPkfADT2V2JMsD9xewM7DCBjwYDVR0jBIGHMIGEgBRcVO9DEZPkfADT2V2JMsD9
+xewM7KFhpF8wXTELMAkGA1UEBhMCVVMxEzARBgNVBAgTCkNhbGlmb3JuaWExFjAU
+BgNVBAcTDVNhbiBGcmFuY2lzY28xITAfBgNVBAoTGEludGVybmV0IFdpZGdpdHMg
+UHR5IEx0ZIIJAJqIevVBguhYMAwGA1UdEwQFMAMBAf8wDQYJKoZIhvcNAQEFBQAD
+ggEBAH6GSMtkydkQndso9tWo4qEFJubMg24uBIvYjtOMb2LylDLqwmhAIX2+tfyv
+26sZNeTr9z/Zu8TNIJ1t+CRb55Z3uULIk12rDCxXbej+GGDvPhDx16S8ASjHAOHJ
+vtzlbtD8qi15khukGiMWKIkJcs4DUq2jKAUR2/oNV5ra+bVOKsMKB69ry/sZFOk+
+f+jZyrih6FRjURqRfA9f16uu7WjZ9zC56cBBKmyXW5QYHMjYG7MrV5Z1mlfl1+yM
+QnnYWdp9rj5+sza5riF8UhS83KK42xBKmbFZTkeVxFwXBfZwfLrq2J8q1JJFZCSx
+GCHaA93FSmdbkLS+yPB97WbScPs=
+-----END CERTIFICATE-----
