@@ -6,6 +6,13 @@ Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in com
 
 Next Version
 
+Runtime Behavior Changes:
+
+  * util-security: Assert validity of X.509 certificates when read from a file.
+    Attempting to read a `c.t.util.security.X509CeritificateFile` will now assert
+    that the certificate is valid, i.e., if the current date and time are within
+    the validity period given in the certificate. ``PHAB_ID=D88745``
+
 7.1.0  2017-09-06
 
 API Changes:
